Fix the overlapping footer bug

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ del {
 }
 
 #footer {
+    float: left;
 	clear: both;
 	width: 100%;
 	text-align: center;
